--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "tsc -w node \"node dist/index.js\" "
+   
   },
   "author": "",
   "license": "ISC",
